--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.0/css/boxicons.min.css" integrity="sha512-pVCM5+SN2+qwj36KonHToF2p1oIvoU3bsqxphdOIWMYmgr4ZqD3t5DjKvvetKhXGc/ZG5REYTT6ltKfExEei/Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.0/css/boxicons.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 
@@ -32,9 +32,7 @@
         <span></span>
       </div>
       <nav class="navbar js-nav">
-        <a href="#">Home</a>
         <a href="#about">About</a>
-        <a href="#service">Services</a>
         <a href="#skill">Skill</a>
         <a href="#project">Projects</a>
         <a href="#contact">Contact</a>
@@ -50,10 +48,11 @@
           <h2>Myint Marlar Wai</h2>
           <h3>And I'm a <span>Frontend Web Developer!</span></h3>
           <p class="intro-txt">
-            I am a skilled frontend developer with a degree in Information Technology and over 7 years of experience in web development. My expertise lies in creating responsive, user-friendly web interfaces. I can effectively communicate and collaborate in Japanese, holding a JLPT N3 certificate, and I am currently studying for the JLPT N2 exam.
+            I am a frontend developer with over 7 years of experience specializing in creating clean, responsive, and efficient websites. I am proficient in HTML, CSS,Tailwind CSS,Bootstrap, JavaScript, WordPress, jQuery, animation implementation, and mobile-first development. I focus on delivering high-quality, user-centric digital experiences optimized for performance.
+           .I have JLPT N3 certificate.Now, I am learning JLPT N2.Familiar in photoshop, AI, AdobeXD, Figma for writing coding. I can Communicate with clients takes place during meetings and slack, backlog.
           </p>
           <div class="image-blk sp">
-            <div class="circle-line">
+            <div class="bdr-line">
               <img src="./images/img_profile01.jpg" alt="Myint Marlar Wai">
             </div>
           </div>
@@ -67,7 +66,7 @@
       </div>
       <!-- ./content-blk -->
       <div class="image-blk pc">
-        <div class="circle-line">
+        <div class="bdr-line">
           <img src="./images/img_profile01.jpg" alt="Myint Marlar Wai">
         </div>
       </div>
@@ -78,146 +77,59 @@
   <section class="sec-about" id="about">
     <div class="l-inner d-flex">
       <div class="my-photo">
-        <div class="circle-line">
+        <div class="bdr-line">
           <img src="./images/img_profile02.jpg" alt="Myint Marlar Wai">
         </div>
       </div>
       <div class="my-about">
         <h2>About Me</h2>
-        <span>Frontend Web Developer!</span>
         <p>
-          I am a frontend developer with a degree in Information Technology, graduating in 2015. I began my career at SeaDreamCo., Ltd, where I developed web projects using HTML, CSS, JavaScript, jQuery, and WordPress for 3 years. In 2018, I joined Metateam Myanmar as a SubLeader and became a Team Leader after two years. My responsibilities include managing project estimates, schedules, client communications, and team support. I also have experience as a trainer in design coding. Currently, I am expanding my skills by learning Vue.js and preparing for the JLPT N2 exam, building on my existing JLPT N3 certification.
+          After graduating from the University of Technology as an IT Major in 2015. I began my career at SeaDreamCo., Ltd, where I developed web projects using HTML, CSS, JavaScript, jQuery, and WordPress for 3 years. In 2018, I joined Metateam Myanmar as a SubLeader and became a Team Leader after two years. My responsibilities include managing project estimates, schedules, client communications, and team support. I also have experience as a trainer in design coding. Currently, I am expanding my skills by learning and preparing for the JLPT N2 exam.
         </p>
       </div>
     </div>
   </section>
   <!-- ./sec-about -->
-  <section class="sec-service" id="service">
+  <section class="sec-service" id="skill">
     <div class="l-inner">
-      <h2 class="cmn-ttl01">My <span>Services</span></h2>
-      <ul class="service-list">
+      <h2 class="cmn-ttl01">My <span>Skills & Expertise</span></h2>
+      <ol class="list">
         <li>
-          <img src="./images/img_service01.jpg" alt="">
-          <h3>Website Coding</h3>
-          <p class="desc-txt">
-            I specialize in creating clean, responsive, and efficient static websites using the latest standards in HTML, CSS, and JavaScript. Whether it's developing from scratch or enhancing existing designs, I ensure that every project is optimized for performance and user experience across all devices. My focus is on delivering high-quality, maintainable code that brings your website to life with smooth functionality and modern design practices.
-          </p>
+          <h3>Frontend Development</h3>
+          <ul>
+            <li>Proficient in HTML5, CSS3, JavaScript, Jquery , Wordpress and responsive web design principles.</li>
+            <li>Hands-on experience with animation libraries like GSAP Anitmation, jQuery, CSS3 animations.</li>
+            <li>Strong knowledge of modern web trends and best practices.</li>
+          </ul>
         </li>
         <li>
-          <img src="./images/img_service02.jpg" alt="">
-          <h3>Wordpress CMS</h3>
-          <p class="desc-txt">
-            I offer custom WordPress website development, focusing on creating user-friendly websites that allow clients to easily manage and update their content. By leveraging WordPress’s powerful CMS capabilities, I build sites that are not only visually appealing but also easy to maintain without technical knowledge. Whether you need a business website, blog, or e-commerce platform, I ensure that your WordPress site is fully customizable, scalable, and optimized for performance.
-          </p>
+          <h3>CMS Integration</h3>
+          <ul>
+            <li>Skilled in implementing CMS platforms such as WordPress, including custom themes and plugin integration.</li>
+            <li>I have 6 months of experience in Shopify CMS.</li>
+          </ul>
         </li>
-      </ul>
+        <li>
+          <h3>Mobile Responsive layouts</h3>
+          <ul>
+            <li>Experience in designing and developing user-friendly web interfaces.</li>
+            <li>Focus on delivering clean, responsive layouts optimized for all devices, including mobile and tablet.</li>
+            <li>Specialized in developing mobile-first designs and ensuring optimal performance on smartphones and other devices.</li>
+            <li>Experience working on dynamic websites with 100+ pages, ensuring maintainability and performance.</li>
+          </ul>
+        </li>
+        <li>
+          <h3>Tools & Technologies</h3>
+          <ul>
+            <li>Development Tools: VS Code, Git, Figma, Photoshop, Adobe XD, AI</li>
+            <li>Collaboration Tools: Backlog, Slack, Chatwork</li>
+            <li>Frameworks/Libraries: jQuery, Bootstrap, TailwindCSS, GSAP</li>
+            <li>CMS: WordPress, Shopify (6 months), Laravel (OJT)</li>
+          </ul>
+        </li>
+      </ol>
     </div>
   </section>
-  <!-- ./sec-service -->
-  <section class="sec-skill js-animate active" id="skill">
-    <h2 class="cmn-ttl01">My <span>Skills</span></h2>
-    <div class="l-inner d-flex">
-      <div class="technical-bars">
-        <h3 class="cmn-ttl02">Technical Skills</h3>
-        <div class="bar"><i style="color: #e34c26;" class='bx bxl-html5'></i>
-          <div class="info">
-            <span>HTML5</span>
-          </div>
-          <div class="progress-line html">
-            <span></span>
-          </div>
-        </div>
-        <div class="bar"><i style="color: #2965f1;" class='bx bxl-css3'></i>
-          <div class="info">
-            <span>CSS3</span>
-          </div>
-          <div class="progress-line css">
-            <span></span>
-          </div>
-        </div>
-        <div class="bar">
-          <div class="info">
-            <span>SCSS</span>
-          </div>
-          <div class="progress-line scss">
-            <span></span>
-          </div>
-        </div>
-        <div class="bar"><i style="color: #f0db4f;" class='bx bxl-javascript'></i>
-          <div class="info">
-            <span>Javascript</span>
-          </div>
-          <div class="progress-line javascript">
-            <span></span>
-          </div>
-        </div>
-        <div class="bar"><i style="color: #0769AD;" class='bx bxl-jquery'></i>
-          <div class="info">
-            <span>Jquery</span>
-          </div>
-          <div class="progress-line jquery">
-            <span></span>
-          </div>
-        </div>
-        <div class="bar"><i style="color: #0769AD;" class='bx bxl-wordpress'></i>
-          <div class="info">
-            <span>Wordpress</span>
-          </div>
-          <div class="progress-line wp">
-            <span></span>
-          </div>
-        </div>
-      </div>
-      <div class="my-professional">
-        <h3 class="cmn-ttl02">Professional Skills</h3>
-        <div class="radial-bars">
-          <div class="radial-bar">
-            <svg x="0px" y="0px" viewBox="0 0 200 200">
-              <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
-              <circle class="path path-4" cx="100" cy="100" r="80"></circle>
-            </svg>
-            <div class="percentage">100%</div>
-            <div class="text">Leadership</div>
-          </div>
-          <div class="radial-bar">
-            <svg x="0px" y="0px" viewBox="0 0 200 200">
-              <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
-              <circle class="path path-4" cx="100" cy="100" r="80"></circle>
-            </svg>
-            <div class="percentage">100%</div>
-            <div class="text">Reporting</div>
-          </div>
-          <div class="radial-bar">
-            <svg x="0px" y="0px" viewBox="0 0 200 200">
-              <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
-              <circle class="path path-1" cx="100" cy="100" r="80"></circle>
-            </svg>
-            <div class="percentage">85%</div>
-            <div class="text">Communication</div>
-          </div>
-          <div class="radial-bar">
-            <svg x="0px" y="0px" viewBox="0 0 200 200">
-              <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
-              <circle class="path path-2" cx="100" cy="100" r="80"></circle>
-            </svg>
-            <div class="percentage">90%</div>
-            <div class="text">Problem Solving</div>
-          </div>
-          <div class="radial-bar">
-            <svg x="0px" y="0px" viewBox="0 0 200 200">
-              <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
-              <circle class="path path-3" cx="100" cy="100" r="80"></circle>
-            </svg>
-            <div class="percentage">90%</div>
-            <div class="text">TeamWork</div>
-          </div>
-        </div>
-      </div>
-      
-
-    </div>
-  </section>
-  <!-- ./sec-skill -->
   <section class="sec-project" id="project">
     <div class="l-inner">
       <h2 class="cmn-ttl01">My <span>Projects</span></h2>
@@ -225,7 +137,7 @@
         <li>
           <a href="https://criticalbrain.co.jp/tensyoku-recipe/" target="_blank">
             <img src="./images/my_proj01.jpg" alt="">
-            <h3>転職レシピ</h3>
+            <h3>ペットサロン</h3>
              <p class="desc-txt">Corporate website</p>
              <p class="tech-list">
               <span>HTML5</span>
@@ -343,6 +255,31 @@
               <span>CSS3</span>
               <span>Jquery</span>
               <span>JavaScript</span>
+             </p>
+          </a>
+        </li>
+        <li>
+          <a href="https://st-yasuragi.com/" target="_blank">
+            <img src="./images/my_proj10.jpg" alt="">
+            <h3>やすらぎ新宿店</h3>
+             <p class="desc-txt">Corporate website</p>
+             <p class="tech-list">
+              <span>HTML5</span>
+              <span>CSS3</span>
+              <span>Jquery</span>
+              <span>WordPress</span>
+             </p>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.is-slitter.co.jp/" target="_blank">
+            <img src="./images/my_proj11.jpg" alt="">
+            <h3>株式会社 ISスリッター</h3>
+             <p class="desc-txt">Corporate website</p>
+             <p class="tech-list">
+              <span>HTML5</span>
+              <span>CSS3</span>
+              <span>Jquery</span>
              </p>
           </a>
         </li>
