--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <li><a href="#"><i class='bx bxl-instagram'></i></a></li>
             <li><a href="#"><i class='bx bxl-linkedin-square'></i></a></li>
           </ul>
-          <a href="#" target="_blank" class="cmn-btn01">About Me</a>
+          <a href="./pdf/my_resume.pdf" target="_blank" class="cmn-btn01">My Resume</a>
         </div>
       </div>
       <!-- ./content-blk -->
@@ -84,7 +84,7 @@
       <div class="my-about">
         <h2>About Me</h2>
         <p>
-          After graduating from the University of Technology as an IT Major in 2015. I began my career at SeaDreamCo., Ltd, where I developed web projects using HTML, CSS, JavaScript, jQuery, and WordPress for 3 years. In 2018, I joined Metateam Myanmar as a SubLeader and became a Team Leader after two years. My responsibilities include managing project estimates, schedules, client communications, and team support. I also have experience as a trainer in design coding. Currently, I am expanding my skills by learning and preparing for the JLPT N2 exam.
+          After graduating from the University of Technology as an IT Major in 2016. I began my career at SeaDreamCo., Ltd, where I developed web projects using HTML, CSS, JavaScript, jQuery, and WordPress for 3 years. In 2018, I joined Metateam Myanmar as a SubLeader and became a Team Leader after two years. My responsibilities include managing project estimates, schedules, client communications, and team support. I also have experience as a trainer in design coding. Currently, I am expanding my skills by learning and preparing for the JLPT N2 exam.
         </p>
       </div>
     </div>
@@ -135,7 +135,7 @@
       <h2 class="cmn-ttl01">My <span>Projects</span></h2>
       <ul class="project-list">
         <li>
-          <a href="https://criticalbrain.co.jp/tensyoku-recipe/" target="_blank">
+          <a href="https://www.dogsalon-pele.com/" target="_blank">
             <img src="./images/my_proj01.jpg" alt="">
             <h3>ペットサロン</h3>
              <p class="desc-txt">Corporate website</p>
