--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <ul class="project-list">
         <li>
           <a href="https://www.dogsalon-pele.com/" target="_blank">
-            <img src="./images/my_proj01.jpg" alt="">
+            <img src="./images/my_proj01.jpg" alt="ペットサロン">
             <h3>ペットサロン</h3>
              <p class="desc-txt">Corporate website</p>
              <p class="tech-list">
@@ -150,7 +150,7 @@
         </li>
         <li>
           <a href="https://ogatajyuku.com/" target="_blank">
-            <img src="./images/my_proj02.jpg" alt="">
+            <img src="./images/my_proj02.jpg" alt="小縣塾（おがたじゅく）">
             <h3>小縣塾（おがたじゅく）</h3>
             <p class="desc-txt">Corporate website</p>
             <p class="tech-list">
@@ -178,7 +178,7 @@
         </li>
         <li>
           <a href="https://deepbranding.jp/" target="_blank">
-            <img src="./images/my_proj04.jpg" alt="">
+            <img src="./images/my_proj04.jpg" alt="Deep Branding Japan">
             <h3>Deep Branding Japan</h3>
             <p class="desc-txt">Corporate website</p>
             <p class="tech-list">
@@ -192,7 +192,7 @@
         </li>
         <li>
           <a href="https://komiyanoboru.com/" target="_blank">
-            <img src="./images/my_proj05.jpg" alt="">
+            <img src="./images/my_proj05.jpg" alt="古宮昇 オフィシャルサイト">
             <h3>古宮昇 オフィシャルサイト</h3>
             <p class="desc-txt">Corporate website</p>
             <p class="tech-list">
@@ -206,7 +206,7 @@
         </li>
         <li>
           <a href="https://koukendoboku.com/" target="_blank">
-            <img src="./images/my_proj06.jpg" alt="">
+            <img src="./images/my_proj06.jpg" alt="株式会社コウケン土木">
             <h3>株式会社コウケン土木</h3>
             <p class="desc-txt">Corporate website</p>
             <p class="tech-list">
@@ -220,7 +220,7 @@
         </li>
         <li>
           <a href="https://metateam.co.jp/" target="_blank">
-            <img src="./images/my_proj07.jpg" alt="">
+            <img src="./images/my_proj07.jpg" alt="METATEAM株式会社">
             <h3>METATEAM株式会社</h3>
             <p class="desc-txt">Renewal Site</p>
             <p class="tech-list">
@@ -234,7 +234,7 @@
         </li>
         <li>
           <a href="https://mbp20th.net/" target="_blank">
-            <img src="./images/my_proj08.jpg" alt="">
+            <img src="./images/my_proj08.jpg" alt="20周年記念サイト">
             <h3>20周年記念サイト</h3>
              <p class="desc-txt">LP Page</p>
              <p class="tech-list">
@@ -247,7 +247,7 @@
         </li>
         <li>
           <a href="http://www.sake-ariyama.co.jp/" target="_blank">
-            <img src="./images/my_proj09.jpg" alt="">
+            <img src="./images/my_proj09.jpg" alt="株式会社アリヤマ">
             <h3>株式会社アリヤマ</h3>
              <p class="desc-txt">Corporate website</p>
              <p class="tech-list">
@@ -260,7 +260,7 @@
         </li>
         <li>
           <a href="https://st-yasuragi.com/" target="_blank">
-            <img src="./images/my_proj10.jpg" alt="">
+            <img src="./images/my_proj10.jpg" alt="やすらぎ新宿店">
             <h3>やすらぎ新宿店</h3>
              <p class="desc-txt">Corporate website</p>
              <p class="tech-list">
@@ -273,7 +273,7 @@
         </li>
         <li>
           <a href="https://www.is-slitter.co.jp/" target="_blank">
-            <img src="./images/my_proj11.jpg" alt="">
+            <img src="./images/my_proj11.jpg" alt="株式会社 ISスリッター">
             <h3>株式会社 ISスリッター</h3>
              <p class="desc-txt">Corporate website</p>
              <p class="tech-list">
