--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
+  <title>Marlar's Portfolio</title>
   <meta property="og:title" content="">
   <meta name="keywords" content="">
   <meta name="description" content="">
@@ -12,7 +12,7 @@
   <meta property="og:site_name" content="">
   <meta property="og:description" content="">
   <meta property="og:image" content="">
-  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.png" />
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.0/css/boxicons.min.css" />
