--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h2>Myint Marlar Wai</h2>
           <h3>And I'm a <span>Frontend Web Developer!</span></h3>
           <p class="intro-txt">
-            I am a frontend developer with over 7 years of experience specializing in creating clean, responsive, and efficient websites. I am proficient in HTML, CSS,Tailwind CSS,Bootstrap, JavaScript, WordPress, jQuery, animation implementation, and mobile-first development. I focus on delivering high-quality, user-centric digital experiences optimized for performance.
+            I am a frontend developer with over 7 years of experience specializing in creating clean, responsive, and efficient websites. I am proficient in HTML, CSS,Tailwind CSS,Bootstrap, JavaScript, WordPress, jQuery, animation implementation, and responsive coding. I focus on delivering high-quality, user-centric digital experiences optimized for performance.
            .I have JLPT N3 certificate.Now, I am learning JLPT N2.Familiar in photoshop, AI, AdobeXD, Figma for writing coding. I can Communicate with clients takes place during meetings and slack, backlog.
           </p>
           <div class="image-blk sp">
