--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
           <h2>Myint Marlar Wai</h2>
           <h3>And I'm a <span>Frontend Web Developer!</span></h3>
           <p class="intro-txt">
-            I am a frontend developer with over 7 years of experience specializing in creating clean, responsive, and efficient websites. I am proficient in HTML, CSS,Tailwind CSS,Bootstrap, JavaScript, WordPress, jQuery, animation implementation, and responsive coding. I focus on delivering high-quality, user-centric digital experiences optimized for performance.
-           .I have JLPT N3 certificate.Now, I am learning JLPT N2.Familiar in photoshop, AI, AdobeXD, Figma for writing coding. I can Communicate with clients takes place during meetings and slack, backlog.
+            I am a web coder and frontend developer with over 7 years of experience specializing in creating clean, responsive, and efficient websites.
+            I have a lot of experience in web coding (Landing Page, Corporate sites,Renewal Site and CMS Wordpress Site). 
+            Proficient in implementing animations and responsive coding..I have JLPT N3 certificate.Now, I am learning JLPT N2.
+            I am comfortable communicating with clients during meetings and collaborating effectively using tools like Slack and Backlog.
           </p>
           <div class="image-blk sp">
             <div class="bdr-line">
@@ -57,9 +59,9 @@
             </div>
           </div>
           <ul class="sns-list">
-            <li><a href="#"><i class='bx bxl-facebook-square'></i></a></li>
-            <li><a href="#"><i class='bx bxl-instagram'></i></a></li>
-            <li><a href="#"><i class='bx bxl-linkedin-square'></i></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100004880958649&mibextid=ZbWKwL" target="_blank"><i class='bx bxl-facebook-square'></i></a></li>
+            <li><a href="https://www.instagram.com/marlar30494/profilecard/?igsh=MTQ1d25oMHZqbWphbA==" target="_blank"><i class='bx bxl-instagram'></i></a></li>
+            <li><a href="linkedin.com/in/myintmarlar-wai-85029b236" target="_blank"><i class='bx bxl-linkedin-square'></i></a></li>
           </ul>
           <a href="./pdf/my_resume.pdf" target="_blank" class="cmn-btn01">My Resume</a>
         </div>
@@ -302,9 +304,9 @@
           <li><a href="tel:09421030494" class="d-flex"><i class='bx bxs-phone-call'></i> 09421030494</a></li> 
         </ul>
         <ul class="sns-list">
-          <li><a href="#"><i class='bx bxl-facebook-square'></i></a></li>
-          <li><a href="#"><i class='bx bxl-instagram'></i></a></li>
-          <li><a href="#"><i class='bx bxl-linkedin-square'></i></a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=100004880958649&mibextid=ZbWKwL" target="_blank"><i class='bx bxl-facebook-square'></i></a></li>
+            <li><a href="https://www.instagram.com/marlar30494/profilecard/?igsh=MTQ1d25oMHZqbWphbA==" target="_blank"><i class='bx bxl-instagram'></i></a></li>
+            <li><a href="linkedin.com/in/myintmarlar-wai-85029b236" target="_blank"><i class='bx bxl-linkedin-square'></i></a></li>
         </ul>
       </div>
       <div class="my-form">
