--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <ul class="sns-list">
             <li><a href="https://www.facebook.com/profile.php?id=100004880958649&mibextid=ZbWKwL" target="_blank"><i class='bx bxl-facebook-square'></i></a></li>
             <li><a href="https://www.instagram.com/marlar30494/profilecard/?igsh=MTQ1d25oMHZqbWphbA==" target="_blank"><i class='bx bxl-instagram'></i></a></li>
-            <li><a href="linkedin.com/in/myintmarlar-wai-85029b236" target="_blank"><i class='bx bxl-linkedin-square'></i></a></li>
+            <li><a href="https://www.linkedin.com/in/myintmarlar-wai-85029b236" target="_blank"><i class='bx bxl-linkedin-square'></i></a></li>
           </ul>
           <a href="./pdf/my_resume.pdf" target="_blank" class="cmn-btn01">My Resume</a>
         </div>
@@ -306,7 +306,7 @@
         <ul class="sns-list">
           <li><a href="https://www.facebook.com/profile.php?id=100004880958649&mibextid=ZbWKwL" target="_blank"><i class='bx bxl-facebook-square'></i></a></li>
             <li><a href="https://www.instagram.com/marlar30494/profilecard/?igsh=MTQ1d25oMHZqbWphbA==" target="_blank"><i class='bx bxl-instagram'></i></a></li>
-            <li><a href="linkedin.com/in/myintmarlar-wai-85029b236" target="_blank"><i class='bx bxl-linkedin-square'></i></a></li>
+            <li><a href="https://www.linkedin.com/in/myintmarlar-wai-85029b236" target="_blank"><i class='bx bxl-linkedin-square'></i></a></li>
         </ul>
       </div>
       <div class="my-form">
