adding js animation

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     </div>
   </header>
   <!-- ./header -->
-  <section class="sec-mainvisual">
+  <section class="sec-mainvisual js-animation">
     <div class="l-inner d-flex">
-      <div class="content-blk">
+      <div class="content-blk fade-up">
         <div class="main-ttl">
           <small>Hello, It's Me</small>
           <h2>Myint Marlar Wai</h2>
@@ -67,7 +67,7 @@
         </div>
       </div>
       <!-- ./content-blk -->
-      <div class="image-blk pc">
+      <div class="image-blk pc fade-up delay01">
         <div class="bdr-line">
           <img src="./images/img_profile01.jpg" alt="Myint Marlar Wai">
         </div>
@@ -76,14 +76,14 @@
     </div>
   </section>
   <!-- ./sec-mainvisual -->
-  <section class="sec-about" id="about">
+  <section class="sec-about js-animation" id="about">
     <div class="l-inner d-flex">
-      <div class="my-photo">
+      <div class="my-photo fade-up">
         <div class="bdr-line">
           <img src="./images/img_profile02.jpg" alt="Myint Marlar Wai">
         </div>
       </div>
-      <div class="my-about">
+      <div class="my-about fade-up delay01">
         <h2>About Me</h2>
         <p>
           After graduating from the University of Technology as an IT Major in 2016. I began my career at SeaDreamCo., Ltd, where I developed web projects using HTML, CSS, JavaScript, jQuery, and WordPress for 3 years. In 2018, I joined Metateam Myanmar as a SubLeader and became a Team Leader after two years. My responsibilities include managing project estimates, schedules, client communications, and team support. I also have experience as a trainer in design coding. Currently, I am expanding my skills by learning and preparing for the JLPT N2 exam.
@@ -92,10 +92,10 @@
     </div>
   </section>
   <!-- ./sec-about -->
-  <section class="sec-service" id="skill">
+  <section class="sec-service js-animation" id="skill">
     <div class="l-inner">
-      <h2 class="cmn-ttl01">My <span>Skills & Expertise</span></h2>
-      <ol class="list">
+      <h2 class="cmn-ttl01 fade-up">My <span>Skills & Expertise</span></h2>
+      <ol class="list fade-up delay01">
         <li>
           <h3>Frontend Development</h3>
           <ul>
@@ -132,10 +132,10 @@
       </ol>
     </div>
   </section>
-  <section class="sec-project" id="project">
+  <section class="sec-project js-animation" id="project">
     <div class="l-inner">
-      <h2 class="cmn-ttl01">My <span>Projects</span></h2>
-      <ul class="project-list">
+      <h2 class="cmn-ttl01 fade-up">My <span>Projects</span></h2>
+      <ul class="project-list fade-up delay01">
         <li>
           <a href="https://www.dogsalon-pele.com/" target="_blank">
             <img src="./images/my_proj01.jpg" alt="ペットサロン">
@@ -289,9 +289,9 @@
     </div>
   </section>
   <!-- ./sec-project -->
-  <section class="sec-contact" id="contact">
-    <h2 class="cmn-ttl01">Contact <span>Me</span></h2>
-    <div class="l-inner d-flex">
+  <section class="sec-contact js-animation" id="contact">
+    <h2 class="cmn-ttl01 fade-up">Contact <span>Me</span></h2>
+    <div class="l-inner d-flex fade-up delay01">
       <div class="my-contact">
         <h3>Let's Work Together</h3>
         <p>
