--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
       <nav class="navbar js-nav">
         <a href="#about">About</a>
-        <a href="#skill">Skill</a>
+        <a href="#skill">Skills</a>
         <a href="#project">Projects</a>
         <a href="#contact">Contact</a>
       </nav>
